# Trajan

./: CMakeLists.txt  Makefile  README.md
src/: AntichainConstraint.cpp  AntichainConstraint.h  Constraint.cpp  Constraint.h  CrossingConstraint.cpp  CrossingConstraint.h  Geno.h  Graph.cpp  Graph.h  IndependentSetConstraint.cpp  IndependentSetConstraint.h  LP.cpp  LP.h  LPFInt.cpp  LPFInt.h  LPInt.cpp  LPInt.h  array2d.h  greedy.cpp  main.cpp  match.cpp  read_csv.cpp  read_csv.h
